--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,10 +1,9 @@
 spring:
-
   datasource:
-    url: jdbc:postgresql://localhost:5432/my_database
-    username: postgres
-    password: 1234
-    driver-class-name: org.postgresql.Driver
+   url: jdbc:postgresql://localhost:5432/test
+   username: postgres
+   password: 1234
+   driver-class-name: org.postgresql.Driver
 
   jpa:
     database-platform: org.hibernate.dialect.PostgreSQLDialect
@@ -13,11 +12,11 @@ spring:
     show-sql: true
 
 app:
-   security:
+  security:
     jwt:
-     secret_key: "java"
-     expiration: 900
-     refreshExpiration: 604800
+      secret_key: "java"
+      expiration: 900
+      refreshExpiration: 604800
 
 server:
   port: 9191
