--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,9 +1,15 @@
 spring:
   datasource:
-   url: jdbc:postgresql://localhost:5432/test
-   username: postgres
-   password: 1234
-   driver-class-name: org.postgresql.Driver
+
+#   url: jdbc:postgresql://localhost:5432/test
+#   username: postgres
+#   password: 1234
+#   driver-class-name: org.postgresql.Driver
+
+     url: ${POSTGRES_DB}
+     username: ${POSTGRES_USER}
+     password: ${POSTGRES_PASSWORD}
+     driver-class-name: org.postgresql.Driver
 
   jpa:
     database-platform: org.hibernate.dialect.PostgreSQLDialect
