fix delete team-member

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,7 +1,7 @@
 spring:
   datasource:
 
-#   url: jdbc:postgresql://localhost:5432/test
+#   url: jdbc:postgresql://localhost:5432/bilingual
 #   username: postgres
 #   password: 1234
 #   driver-class-name: org.postgresql.Driver
